--- a/package.json
+++ b/package.json
@@ -52,6 +52,9 @@
     "express": "^5.1.0",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
+    "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.462.0",
     "mongodb": "^6.16.0",
     "mongoose": "^8.14.0",
